Add PFN requested by John.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -54,6 +54,10 @@ John Cowan
   <a href="#comparator-register-default-recommendation">third
     paragraph</a>.</p>
 
+<p id="pfn3"><b>Post-finalization note #3</b> (added on 2022-07-19):
+  The hash functions in the <code>eq-comparator</code> and the
+  <code>eqv-comparator</code> objects are implementation-defined.</p>
+
 <h1>Abstract</h1>
 
 <p>
