--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <!-- SPDX-FileCopyrightText: 2024 John Cowan -->
+      <!-- SPDX-FileCopyrightText: 2024 Arthur A. Gleckler -->
       <!-- SPDX-License-Identifier: MIT -->
       <title>Comparators (reduced)</title>
       <link href="/admin.css" rel="stylesheet">
