--- a/srfi-128.html
+++ b/srfi-128.html
@@ -44,7 +44,8 @@ John Cowan
       <li>2018-10-09 (Add missing "not.")</li>
       <li>2021-03-29 (Fix arguments to <code>make-comparator</code> in
 	the <a href="#Defaultcomparators">Default comparators</a>
-	section.)</li></ul></li>
+	section.)</li>
+      <li>2024-03-01 (Fix <a href="#erratum-floor">example</a>.)</li></ul></li>
 </ul>
 
 <p id="pfn1"><b>Post-finalization note #1</b>: Because of the extremely high cost of
@@ -156,7 +157,7 @@ Returns a comparator which bundles the <em>type-test, equality, ordering</em>, a
 </p><p>
 </p><ul>
 <li><p><code>(make-comparator boolean? boolean=? (lambda (x y) (and (not x) y)) boolean-hash)</code> will return a comparator for booleans, expressing the ordering <code>#f</code> &lt; <code>#t</code> and the standard hash function for booleans.</p></li>
-<li><p><code>(make-comparator real? = &lt; (lambda (x) (exact (floor (abs x)))))</code> will return a comparator expressing the natural ordering of real numbers and a plausible (but not optimal) hash function.</p></li>
+<li id="erratum-floor"><p><code>(make-comparator real? = &lt; (lambda (x) (exact (floor (abs x)))))</code> will return a comparator expressing the natural ordering of real numbers and a plausible (but not optimal) hash function.</p></li>
 <li><p><code>(make-comparator string? string=? string&lt;? string-hash)</code> will return a comparator expressing the implementation's ordering of strings and the standard hash function.</p></li>
 <li><p><code>(make-comparator string? string-ci=? string-ci&lt;? string-ci-hash</code> will return a comparator expressing the implementation's case-insensitive ordering of strings and the standard case-insensitive hash function.</p></li>
 </ul>
